--- a/src/main/resources/views/PaneInicio.fxml
+++ b/src/main/resources/views/PaneInicio.fxml
@@ -9,27 +9,27 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="875.0" prefWidth="1340.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneInicioController">
+<AnchorPane maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneInicioController">
    <children>
-      <VBox alignment="CENTER" fillWidth="false" focusTraversable="true" layoutX="-1.0" layoutY="-1.0" minHeight="620.0" minWidth="1030.0" prefHeight="980.0" prefWidth="1670.0" style="-fx-background-color: #E9E9E9;" AnchorPane.topAnchor="0.0">
+      <VBox alignment="CENTER" focusTraversable="true" prefHeight="882.0" prefWidth="1262.0" AnchorPane.topAnchor="0.0">
          <children>
-            <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="160.0" prefWidth="1000.0" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;">
+            <GridPane alignment="CENTER" maxHeight="140.0" maxWidth="900.0" minHeight="140.0" minWidth="900.0" prefHeight="140.0" prefWidth="900.0" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="100.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="90.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="90.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="90.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="90.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="90.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="90.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="100.0" prefHeight="110.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <VBox.margin>
-                  <Insets bottom="30.0" top="40.0" />
+                  <Insets bottom="20.0" top="30.0" />
                </VBox.margin>
                <children>
-                  <ImageView fx:id="imgFilmoteca" fitHeight="130.0" fitWidth="112.0" nodeOrientation="INHERIT" onMouseClicked="#goToFilmoteca" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <ImageView fx:id="imgFilmoteca" fitHeight="100.0" fitWidth="100.0" nodeOrientation="INHERIT" onMouseClicked="#goToFilmoteca" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
@@ -37,42 +37,42 @@
                         <Image url="@../images/sections/Filmoteca.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="imgPeliculas" fitHeight="130.0" fitWidth="112.0" nodeOrientation="INHERIT" onMouseClicked="#goToPeliculas" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <ImageView fx:id="imgPeliculas" fitHeight="100.0" fitWidth="100.0" nodeOrientation="INHERIT" onMouseClicked="#goToPeliculas" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <image>
                         <Image url="@../images/sections/Peliculas.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="imgSeries" fitHeight="130.0" fitWidth="112.0" nodeOrientation="INHERIT" onMouseClicked="#goToSeries" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <ImageView fx:id="imgSeries" fitHeight="100.0" fitWidth="100.0" nodeOrientation="INHERIT" onMouseClicked="#goToSeries" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <image>
                         <Image url="@../images/sections/Series.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="imgCartelera" fitHeight="130.0" fitWidth="112.0" nodeOrientation="INHERIT" onMouseClicked="#goToCartelera" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <ImageView fx:id="imgCartelera" fitHeight="100.0" fitWidth="100.0" nodeOrientation="INHERIT" onMouseClicked="#goToCartelera" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <image>
                         <Image url="@../images/sections/Cartelera.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="imgProximamente" fitHeight="130.0" fitWidth="112.0" nodeOrientation="INHERIT" onMouseClicked="#goToProximamente" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <ImageView fx:id="imgProximamente" fitHeight="100.0" fitWidth="100.0" nodeOrientation="INHERIT" onMouseClicked="#goToProximamente" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <image>
                         <Image url="@../images/sections/Proximamente.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="imgFavoritos" fitHeight="130.0" fitWidth="112.0" nodeOrientation="INHERIT" onMouseClicked="#goToMisListas" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                  <ImageView fx:id="imgFavoritos" fitHeight="100.0" fitWidth="100.0" nodeOrientation="INHERIT" onMouseClicked="#goToMisListas" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <image>
                         <Image url="@../images/sections/Favoritos.png" />
                      </image>
                   </ImageView>
                </children>
             </GridPane>
-            <ImageView fx:id="imgCentralInicio" fitHeight="320.0" fitWidth="800.0" pickOnBounds="true">
+            <ImageView fx:id="imgCentralInicio" fitHeight="340.0" fitWidth="800.0" pickOnBounds="true">
                <VBox.margin>
-                  <Insets bottom="20.0" top="20.0" />
+                  <Insets />
                </VBox.margin>
                <image>
                   <Image url="@../images/others/imgInicio.png" />
                </image>
             </ImageView>
-            <GridPane alignment="CENTER" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;">
+            <GridPane alignment="CENTER" hgap="15.0" maxWidth="1200.0" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="100.0" />
@@ -87,42 +87,49 @@
                   <RowConstraints maxHeight="-Infinity" minHeight="10.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <ImageView fx:id="imgObra01" fitHeight="170.0" fitWidth="120.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                  <ImageView fx:id="imgObra01" fitHeight="185.0" fitWidth="140.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets />
                      </GridPane.margin>
                   </ImageView>
-                  <ImageView fx:id="imgObra02" fitHeight="170.0" fitWidth="120.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                  <ImageView fx:id="imgObra02" fitHeight="185.0" fitWidth="140.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin></ImageView>
-                  <ImageView fx:id="imgObra03" fitHeight="170.0" fitWidth="120.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                        <Insets />
+                     </GridPane.margin>
+                  </ImageView>
+                  <ImageView fx:id="imgObra03" fitHeight="185.0" fitWidth="140.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin></ImageView>
-                  <ImageView fx:id="imgObra04" fitHeight="170.0" fitWidth="120.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                        <Insets />
+                     </GridPane.margin>
+                  </ImageView>
+                  <ImageView fx:id="imgObra04" fitHeight="185.0" fitWidth="140.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin></ImageView>
-                  <ImageView fx:id="imgObra05" fitHeight="170.0" fitWidth="120.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                        <Insets />
+                     </GridPane.margin>
+                  </ImageView>
+                  <ImageView fx:id="imgObra05" fitHeight="185.0" fitWidth="140.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin></ImageView>
-                  <ImageView fx:id="imgObra06" fitHeight="170.0" fitWidth="120.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                        <Insets />
+                     </GridPane.margin>
+                  </ImageView>
+                  <ImageView fx:id="imgObra06" fitHeight="185.0" fitWidth="140.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin></ImageView>
-                  <ImageView fx:id="imgObra07" fitHeight="170.0" fitWidth="120.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                        <Insets />
+                     </GridPane.margin>
+                  </ImageView>
+                  <ImageView fx:id="imgObra07" fitHeight="185.0" fitWidth="140.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin></ImageView>
-                  <ImageView fx:id="imgObra08" fitHeight="170.0" fitWidth="120.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" GridPane.columnIndex="7" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                        <Insets />
+                     </GridPane.margin>
+                  </ImageView>
+                  <ImageView fx:id="imgObra08" fitHeight="185.0" fitWidth="140.0" focusTraversable="true" nodeOrientation="INHERIT" onMouseClicked="#imgObraPressed" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin></ImageView>
+                        <Insets />
+                     </GridPane.margin>
+                  </ImageView>
                </children>
                <VBox.margin>
-                  <Insets bottom="40.0" left="30.0" right="30.0" top="40.0" />
+                  <Insets bottom="30.0" top="20.0" />
                </VBox.margin>
                <opaqueInsets>
                   <Insets />
