--- a/src/main/resources/views/PaneMisListas.fxml
+++ b/src/main/resources/views/PaneMisListas.fxml
@@ -16,9 +16,9 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneMisListasController">
    <children>
-      <Pane minHeight="620.0" minWidth="1030.0" prefHeight="980.0" prefWidth="1670.0" AnchorPane.topAnchor="0.0">
+      <Pane AnchorPane.topAnchor="0.0">
          <children>
-            <VBox prefHeight="878.0" prefWidth="1263.0" style="-fx-background-color: #E9E9E9;">
+            <VBox alignment="TOP_CENTER" prefHeight="860.0" prefWidth="1304.0" style="-fx-background-color: #E9E9E9;">
                <children>
                   <ScrollPane hbarPolicy="NEVER" pannable="true" prefHeight="257.0" prefWidth="1203.0" style="-fx-background-radius: 12;" vbarPolicy="NEVER" vmax="-1.0">
                      <content>
@@ -96,17 +96,17 @@
                                     </ImageView>
                                  </children>
                                  <padding>
-                                    <Insets bottom="30.0" left="30.0" right="30.0" />
+                                    <Insets bottom="30.0" left="30.0" />
                                  </padding>
                               </HBox>
                            </children>
                         </VBox>
                      </content>
                      <VBox.margin>
-                        <Insets left="30.0" right="30.0" top="30.0" />
+                        <Insets left="30.0" top="30.0" />
                      </VBox.margin>
                   </ScrollPane>
-                  <GridPane prefHeight="505.0" prefWidth="1203.0">
+                  <GridPane hgap="22.0" prefHeight="532.0" prefWidth="1203.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -117,7 +117,7 @@
                         <RowConstraints maxHeight="454.66668701171875" minHeight="10.0" prefHeight="454.66668701171875" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <VBox.margin>
-                        <Insets bottom="30.0" left="50.0" right="50.0" top="40.0" />
+                        <Insets left="50.0" right="50.0" top="40.0" />
                      </VBox.margin>
                      <children>
                         <HBox alignment="CENTER" spacing="100.0">
@@ -858,7 +858,7 @@
                               </VBox>
                            </content>
                            <GridPane.margin>
-                              <Insets right="6.0" />
+                              <Insets />
                            </GridPane.margin>
                         </ScrollPane>
                      </children>
