--- a/src/main/resources/views/PaneTop.fxml
+++ b/src/main/resources/views/PaneTop.fxml
@@ -15,18 +15,18 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="875.0" prefWidth="1340.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneTopController">
+<AnchorPane maxHeight="882.0" maxWidth="1262.0" minHeight="882.0" minWidth="1262.0" prefHeight="882.0" prefWidth="1262.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneTopController">
    <children>
-      <VBox alignment="TOP_CENTER" fillWidth="false" prefHeight="875.0" prefWidth="1400.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="TOP_CENTER" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox alignment="TOP_CENTER" prefHeight="304.0" prefWidth="1504.0" style="-fx-background-color: #292929; -fx-background-radius: 8;">
+            <VBox alignment="TOP_CENTER" maxWidth="1200.0" minWidth="1200.0" prefWidth="1200.0" style="-fx-background-color: #292929; -fx-background-radius: 8;">
                <children>
-                  <ImageView fitHeight="32.0" fitWidth="1320.0" pickOnBounds="true">
+                  <ImageView fitHeight="32.0" fitWidth="1200.0" pickOnBounds="true">
                      <image>
                         <Image url="@../images/others/filmLine.PNG" />
                      </image>
                   </ImageView>
-                  <GridPane alignment="TOP_CENTER" prefWidth="1280.0">
+                  <GridPane alignment="TOP_CENTER" maxWidth="1200.0" minWidth="1200.0" prefWidth="1200.0">
                     <columnConstraints>
                       <ColumnConstraints halignment="CENTER" minWidth="100.0" />
                       <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="100.0" />
@@ -86,7 +86,7 @@
                         </ImageView>
                      </children>
                   </GridPane>
-                  <ImageView fitHeight="32.0" fitWidth="1320.0" pickOnBounds="true">
+                  <ImageView fitHeight="32.0" fitWidth="1200.0" pickOnBounds="true">
                      <image>
                         <Image url="@../images/others/filmLine.PNG" />
                      </image>
@@ -96,16 +96,10 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
                <VBox.margin>
-                  <Insets left="30.0" right="30.0" top="30.0" />
+                  <Insets left="20.0" right="30.0" top="30.0" />
                </VBox.margin>
             </VBox>
-            <GridPane prefHeight="50.0" prefWidth="1400.0" style="-fx-background-color: #292929; -fx-background-radius: 8;">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="831.0" minWidth="10.0" prefWidth="807.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <Pane maxHeight="50.0" maxWidth="1200.0" minHeight="50.0" minWidth="1200.0" prefHeight="50.0" prefWidth="1200.0" style="-fx-background-color: #292929; -fx-background-radius: 8;" VBox.vgrow="ALWAYS">
                <children>
                   <HBox alignment="CENTER_LEFT" spacing="20.0">
                      <children>
@@ -116,6 +110,9 @@
                            <toggleGroup>
                               <ToggleGroup fx:id="btnGroup" />
                            </toggleGroup>
+                           <HBox.margin>
+                              <Insets left="25.0" />
+                           </HBox.margin>
                         </RadioButton>
                         <RadioButton fx:id="rbDecada" mnemonicParsing="false" text="Última década" textFill="WHITE" toggleGroup="$btnGroup">
                            <font>
@@ -133,20 +130,20 @@
                            </font>
                         </RadioButton>
                      </children>
-                     <GridPane.margin>
-                        <Insets left="25.0" />
-                     </GridPane.margin>
+                     <padding>
+                        <Insets bottom="12.0" top="12.0" />
+                     </padding>
                   </HBox>
                </children>
                <VBox.margin>
                   <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
                </VBox.margin>
-            </GridPane>
-            <Pane prefHeight="401.0" prefWidth="1400.0" style="-fx-background-color: #292929; -fx-background-radius: 8;" VBox.vgrow="ALWAYS">
+            </Pane>
+            <Pane style="-fx-background-color: #292929; -fx-background-radius: 8;" VBox.vgrow="ALWAYS">
                <children>
-                  <VBox>
+                  <VBox minWidth="0.0">
                      <children>
-                        <Label fx:id="lblTitulo" alignment="TOP_LEFT" prefHeight="52.0" prefWidth="1200.0" text="TITULO" textFill="WHITE" wrapText="true">
+                        <Label fx:id="lblTitulo" alignment="TOP_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="52.0" prefWidth="1120.0" text="TITULO" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="32.0" />
                            </font>
@@ -154,7 +151,7 @@
                               <Insets bottom="5.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="lblDirectorGenero" alignment="TOP_LEFT" prefHeight="55.0" prefWidth="1200.0" text="Director · Genero" textFill="#ec1b1b" wrapText="true">
+                        <Label fx:id="lblDirectorGenero" alignment="TOP_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1120.0" text="Director · Genero" textFill="#ec1b1b" wrapText="true">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
@@ -162,19 +159,12 @@
                               <Insets bottom="20.0" />
                            </padding>
                         </Label>
-                        <HBox prefHeight="27.0" prefWidth="926.0">
-                           <children>
-                              <Label fx:id="lblEstreno" contentDisplay="CENTER" prefHeight="27.0" prefWidth="441.0" text="1994" textFill="WHITE">
-                                 <font>
-                                    <Font name="System Bold" size="18.0" />
-                                 </font>
-                                 <HBox.margin>
-                                    <Insets />
-                                 </HBox.margin>
-                              </Label>
-                           </children>
-                        </HBox>
-                        <Label fx:id="lblTituloSinopsis" alignment="TOP_LEFT" prefHeight="57.0" prefWidth="208.0" text="Sinopsis:" textFill="WHITE">
+                        <Label fx:id="lblEstreno" contentDisplay="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="400.0" text="1994" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="lblTituloSinopsis" alignment="TOP_LEFT" prefHeight="56.0" prefWidth="300.0" text="Sinopsis:" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="22.0" />
                            </font>
@@ -182,7 +172,7 @@
                               <Insets top="25.0" />
                            </padding>
                         </Label>
-                        <Label fx:id="lblSinopsis" alignment="TOP_LEFT" prefHeight="150.0" prefWidth="1200.0" text="Ejemplo texto sinopsis" textFill="WHITE" wrapText="true">
+                        <Label fx:id="lblSinopsis" alignment="TOP_LEFT" minWidth="1120.0" prefHeight="150.0" prefWidth="1120.0" text="Ejemplo texto sinopsis" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
