--- a/src/main/resources/views/PantallaModelo.fxml
+++ b/src/main/resources/views/PantallaModelo.fxml
@@ -17,7 +17,7 @@
 
 <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="720.0" minWidth="1280.0" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PantallaModeloController">
    <top>
-      <GridPane fx:id="paneHeader" maxHeight="100.0" maxWidth="1920.0" prefHeight="100.0" prefWidth="1280.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
+      <GridPane fx:id="paneHeader" maxHeight="100.0" minHeight="100.0" minWidth="1512.0" prefHeight="100.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" />
@@ -114,12 +114,12 @@
       </GridPane>
    </top>
    <left>
-      <ToolBar maxHeight="980.0" maxWidth="250.0" minHeight="620.0" minWidth="250.0" prefHeight="620.0" prefWidth="250.0" style="-fx-background-color: white;" BorderPane.alignment="TOP_LEFT">
+      <ToolBar maxHeight="882.0" maxWidth="250.0" minHeight="882.0" minWidth="250.0" prefHeight="882.0" prefWidth="250.0" style="-fx-background-color: white;" BorderPane.alignment="TOP_LEFT">
          <padding>
-            <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
+            <Insets bottom="20.0" left="10.0" right="10.0" top="25.0" />
          </padding>
          <items>
-            <VBox maxHeight="980.0" maxWidth="250.0" prefHeight="620.0" prefWidth="200.0" spacing="20.0">
+            <VBox spacing="20.0">
                <children>
                   <Label fx:id="lblInicio" alignment="TOP_LEFT" onMouseClicked="#goToInicio" text="INICIO">
                      <font>
@@ -178,6 +178,6 @@
       </ToolBar>
    </left>
    <center>
-      <Pane fx:id="centralPane" focusTraversable="true" style="-fx-background-color: blue;" BorderPane.alignment="TOP_CENTER" />
+      <Pane fx:id="centralPane" focusTraversable="true" minHeight="882.0" minWidth="1262.0" style="-fx-background-color: #E9E9E9;" BorderPane.alignment="TOP_CENTER" />
    </center>
 </BorderPane>
